过滤器方式登录

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,6 +39,7 @@ security:
   shiro:
     urlFilterMap:
       /logout: logout
+      /login: login
       /getRoleById: authc
       /mainPage: authc
       /rest/*: authc,perm
