--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,6 +46,7 @@ security:
 #      /test/**: anno
 
 project:
-  mainPage: homePage
+  main_page: homePage
   loginUrl: /login
   loginSuccess: /
+  login_html: loginBeifen
